plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.5'
}
apply plugin: "org.openjfx.javafxplugin"

group 'my.dictionary'
version '1.1'

sourceCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
    maven {
        url "https://plugins.gradle.org/m2/"
    }
}
dependencies {
    compile 'org.openjfx:javafx-base:11:win'
    compile 'org.openjfx:javafx-controls:11:win'
    compile 'org.openjfx:javafx-fxml:11:win'
    compile 'org.openjfx:javafx-graphics:11:win'
    compile group: 'org.eclipse.collections', name: 'eclipse-collections-api', version: '10.0.0.M2'
    compile group: 'com.jfoenix', name: 'jfoenix', version: '9.0.8'
    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.25.2'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
    compile group: 'commons-io', name: 'commons-io', version: '2.6'
    compile group: 'org.jfxtras', name: 'jfxtras-controls', version: '10.0-r1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
    compile group: 'de.jensd', name: 'fontawesomefx-commons', version: '9.1.2'
    compile group: 'de.jensd', name: 'fontawesomefx-fontawesome', version: '4.7.0-9.1.2'
    compile group: 'de.jensd', name: 'fontawesomefx-materialicons', version: '2.2.0-9.1.2'
    compile group: 'de.jensd', name: 'fontawesomefx-octicons', version: '4.3.0-9.1.2'
    compile group: 'de.jensd', name: 'fontawesomefx-controls', version: '9.1.2'
    compile group: 'de.jensd', name: 'fontawesomefx-icons525', version: '4.2.0-9.1.2'

    compile group: 'com.github.ben-manes.caffeine', name: 'caffeine', version: '2.6.2'
    compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
    compile group: 'com.squareup.okio', name: 'okio', version: '2.1.0'
    compile group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.12.0'


    testCompile group: 'junit', name: 'junit', version: '4.12'
}
javafx {
    modules = [ 'javafx.controls' , 'javafx.fxml' ]
}
mainClassName = 'zw.home.App'
compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--module-path', classpath.asPath,
                '--add-modules', 'javafx.controls'
        ]
        classpath = files()
    }
}
task createJar(type: Copy) {
    dependsOn 'jar'
    into "$buildDir/libs"
    from configurations.runtime
}
task runn(type:JavaExec){
    classpath sourceSets.main.runtimeClasspath
    main = "zw.home.App"
}
jar {
    inputs.property("moduleName", moduleName)
    manifest {
        attributes('Automatic-Module-Name': moduleName)
    }
}

